deployments/005-deploy-edgenexus-cloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edgenexus-ingress
---
# Source: edgenexus-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgenexus-ingress
  namespace: edgenexus-ingress
  labels:
    app.kubernetes.io/name: edgenexus-ingress
    helm.sh/chart: edgenexus-ingress-0.10.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.2.132
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app:  edgenexus-ingress
---
# Source: edgenexus-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgenexus-ingress
  namespace: edgenexus-ingress
  labels:
    app.kubernetes.io/name: edgenexus-ingress
    helm.sh/chart: edgenexus-ingress-0.10.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgenexus-ingress
  template:
    metadata:
      labels:
        app: edgenexus-ingress
      #annotations:
      #  prometheus.io/scrape: "true"
      #  prometheus.io/port: "9113"
      #  prometheus.io/scheme: "http"
    spec:
      serviceAccountName: edgenexus-ingress
      hostNetwork: false
      containers:
      - name: edgenexus-ingress
        image: "docker.io/edgenexus/edgenexus-ingress:latest"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443

        #- name: prometheus
        #  containerPort: 9113
        - name: readiness-port
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /edge-ready
            port: readiness-port
          periodSeconds: 1
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #edgenexus
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -edge-reload-timeout=300000 #ms, able to wait for changes on the ADC
          - -enable-app-protect=false
          - -edge-configmaps=$(POD_NAMESPACE)/edgenexus-ingress
          - -default-server-tls-secret=$(POD_NAMESPACE)/edgenexus-ingress-default-server-tls
          - -ingress-class=edgenexus
          - -health-status=false
          - -health-status-uri=/edge-health
          - -edge-balancer-ip=192.168.2.132
          - -edge-external-ip=192.168.2.135
          - -v=1
          - -edge-status=true
          - -edge-status-port=8080
          - -edge-status-allow-cidrs=127.0.0.1
          - -report-ingress-status
          - -external-service=edgenexus-ingress
          - -enable-leader-election=true
          - -leader-election-lock-name=edgenexus-ingress-leader-election
          - -enable-prometheus-metrics=true
          - -prometheus-metrics-listen-port=9113
          - -prometheus-tls-secret=
          - -enable-custom-resources=true
          - -enable-tls-passthrough=false
          - -enable-snippets=false
          - -enable-preview-policies=false
          - -ready-status=true
          - -ready-status-port=8081
          - -enable-latency-metrics=false
---
# Source: edgenexus-ingress/templates/controller-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: edgenexus
spec:
  controller: edgenexus.io/ingress-controller
